feat(i18n): add global components i18n (FASE 9.6)
- UserDropdown with full i18n (login, signup, menu items)
- PaywallModal with i18n (benefits, CTA)
- Error pages: not-found.tsx and error.tsx with i18n
- Translations added for paywall and errors (pt-BR, en, es)
- ~60 new translation keys × 3 languages = 180 keys
- Progress: 92% → 95%

--- a/nextjs_space/lib/i18n/translations/en.json
+++ b/nextjs_space/lib/i18n/translations/en.json
@@ -977,5 +977,52 @@
       "errorConnection": "Error loading profile. Check your connection.",
       "errorUpdatingProfile": "Error updating profile"
     }
+  },
+  "header": {
+    "brand": "Athera Run",
+    "tagline": "Smart Training",
+    "navigation": {
+      "dashboard": "Dashboard",
+      "plano": "Plan",
+      "treinos": "Workouts"
+    },
+    "mobileSelect": "Navigation",
+    "userMenu": {
+      "label": "User menu",
+      "login": "Login",
+      "signup": "Sign Up",
+      "editProfile": "Edit Profile",
+      "adminPanel": "Admin Panel",
+      "upgrade": "Upgrade",
+      "logout": "Logout",
+      "loggingOut": "Logging out..."
+    }
+  },
+  "paywall": {
+    "title": "Premium Feature",
+    "description": "is an exclusive feature for Premium subscribers.",
+    "withPremium": "With Premium you get:",
+    "benefits": {
+      "strava": "Full Strava integration",
+      "autoAdjust": "Intelligent auto-adjustment of workouts",
+      "aiChat": "Unlimited chat with specialized AI",
+      "analytics": "Advanced analytics and insights",
+      "multipleGoals": "Multiple simultaneous goals",
+      "priority": "Priority support"
+    },
+    "viewPlans": "View Premium Plans",
+    "maybeLater": "Maybe later"
+  },
+  "errors": {
+    "pageNotFound": {
+      "title": "Page not found",
+      "description": "Sorry, we couldn't find the page you're looking for.",
+      "goHome": "Go to Home"
+    },
+    "genericError": {
+      "title": "Something went wrong",
+      "description": "An unexpected error occurred. Please try again later.",
+      "retry": "Try again"
+    }
   }
 }
