feat(i18n): migrate /training to i18n (Phase 2/6 - 2/11 routes)
TRAINING ROUTE MIGRATED ✅

Changes:
- Copied app/training → app/[locale]/training
- Added i18n hooks (useLocale, useTranslations)
- Extracted 22 text keys (23 total with tracking)
- Translated to 3 languages (PT-BR, EN, ES)
- Updated login redirect and date formatting with locale

Translations added (22 keys):
PT-BR: Análises com IA, Gerar Nova Análise, etc
EN: AI Analysis, Generate New Analysis, etc
ES: Análisis con IA, Generar Nuevo Análisis, etc

Key translations:
- title, subtitle, generateNew, selectPeriod
- lastWeek, lastMonth, analyzing, generateAnalysis
- noAnalysis, recordWorkouts, weeklyAnalysis, monthlyAnalysis
- withAlerts, normal, summary, workouts, distance
- performance, recovery, insights, recommendations, generatedAt

Testing:
✓ Build passed
✓ /pt-BR/training works
✓ /en/training works
✓ /es/training works

Progress: 2/11 routes migrated (18%)
Next: Migrate /calculator

Part of: Complete i18n migration (Phase 2/6 - ongoing)

--- a/nextjs_space/lib/i18n/translations/en.json
+++ b/nextjs_space/lib/i18n/translations/en.json
@@ -653,5 +653,30 @@
   "tracking": {
     "title": "My Workouts",
     "subtitle": "Log your workouts and track your progress"
+  },
+  "training": {
+    "title": "AI Analysis",
+    "subtitle": "Deep insights about your progress and performance",
+    "generateNew": "Generate New Analysis",
+    "selectPeriod": "Select the period and let AI analyze your progress",
+    "lastWeek": "Last Week",
+    "lastMonth": "Last Month",
+    "analyzing": "Analyzing...",
+    "generateAnalysis": "Generate Analysis",
+    "noAnalysis": "No analysis yet",
+    "recordWorkouts": "Record some workouts and generate your first AI analysis",
+    "weeklyAnalysis": "Weekly Analysis",
+    "monthlyAnalysis": "Monthly Analysis",
+    "until": "until",
+    "withAlerts": "With Alerts",
+    "normal": "Normal",
+    "summary": "Summary",
+    "workouts": "Workouts",
+    "distance": "Distance",
+    "performance": "Performance",
+    "recovery": "Recovery",
+    "insights": "Insights",
+    "recommendations": "Recommendations",
+    "generatedAt": "Generated at"
   }
 }
