fix(i18n): corrigir interpolação de variáveis em dashboard e traduções
- Dashboard: usar tPlano() com interpolação para distance, duration, pace
- Traduções: adicionar {{}} em todas as strings com variáveis
- Adicionar todas as variações de fases do plano
- Garantir consistência entre pt-BR, en, es

Fixes: problema de {distance}, {pace} aparecendo literais

--- a/nextjs_space/lib/i18n/translations/pt-BR.json
+++ b/nextjs_space/lib/i18n/translations/pt-BR.json
@@ -535,11 +535,18 @@
       "pace": "Pace: {{pace}}"
     },
     "phases": {
-      "base": "Base",
+      "base": "Base Aeróbica",
       "build": "Construção",
       "peak": "Pico",
       "taper": "Polimento",
-      "race": "Corrida"
+      "race": "Corrida",
+      "baseaerobia": "Base Aeróbica",
+      "base aerobia": "Base Aeróbica",
+      "construcao": "Construção",
+      "construção": "Construção",
+      "pico": "Pico",
+      "polimento": "Polimento",
+      "corrida": "Corrida"
     },
     "workoutTypes": {
       "easy": "Treino Leve",
@@ -572,7 +579,8 @@
       "friday": "Sexta",
       "saturday": "Sábado",
       "sunday": "Domingo"
-    }
+    },
+    "goalDescription": "Plano personalizado para {{goal}}"
   },
   "perfil": {
     "title": "Meu Perfil",
